k8s/additional-services-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: netflix
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: auth-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: metadata-service
  namespace: netflix
spec:
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: metadata-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: netflix
spec:
  ports:
    - port: 5006
      targetPort: 5006
  selector:
    app: recommendation-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: netflix
spec:
  ports:
    - port: 5007
      targetPort: 5007
  selector:
    app: search-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: netflix
spec:
  ports:
    - port: 5008
      targetPort: 5008
  selector:
    app: billing-service
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: netflix
spec:
  ports:
    - port: 5009
      targetPort: 5009
  selector:
    app: notification-service
  type: ClusterIP
